Created a different role with permissions and modified the logic of the apartment request acceptance